# sage

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
config/: rate_limits.yaml
docker/: .env.example  docker-compose.yml
scripts/: test_supabase_db.py
specs/001-youtube-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-youtube-ingestion/checklists/: constitution.md  requirements.md  validation.md
specs/001-youtube-ingestion/contracts/: cli-commands.md
src/sage/: __init__.py
src/sage/cli/: __init__.py  main.py
src/sage/cli/commands/: __init__.py  ingest_youtube.py
src/sage/config/: __init__.py  settings.py
src/sage/db/: __init__.py  connection.py  migrate.py  repositories.py  summary_repository.py  transcript_repository.py  video_repository.py
src/sage/db/migrations/: 001_initial_schema.sql
src/sage/models/: __init__.py  base.py  progress.py  queue.py  summary.py  transcript.py  video.py
src/sage/services/: __init__.py  queue.py  search.py  storage.py  summarization.py  transcript.py
src/sage/utils/: __init__.py  progress.py  validation.py
supabase/config/: kong.yml
supabase/functions/: README.md
supabase/init/: README.md
tests/: __init__.py  conftest.py
